Fixed code number alignment, closes #156

--- a/templates/skeleton/css/plugins/highlighter.css
+++ b/templates/skeleton/css/plugins/highlighter.css
@@ -40,8 +40,8 @@ ol.standardLighter {
 	color: #999;
 	list-style: decimal-leading-zero;
 	margin: 0 0 1.815em 0;
+	padding-left: 2.5em;
 }
-ol.standardLighter li {margin-left: 40px;}
 ol.standardLighter li:before {content: none;}
 .standardLighter .de1, .standardLighter .de2 {color: #F00;}
 .standardLighter .kw1 {color: #1b609a;}
